5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1846_2602.log
== TEST (2019-06-21 01:44:53) 
-- CODE:
from numpy import*
from numpy.linalg impot*
bacteria=array([[2,1,4],[1,2,0],[2,3,2]])
alimento=array(eval(input("digite o vetor: ")))

print("estafilococo:",round(valor[0],1))
print("salmonela:",round(valor[1],1))
print("coli:",round(valor[2],1))

if valor[0]==min(valor):
	print("estafilococo")
elif valor[1]==min(valor):
	print("salmonela")
else:
	print("coli")

-- ERROR:
File "XXXX", line 2
    from numpy.linalg impot*
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 01:45:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
bacteria=array([[2,1,4],[1,2,0],[2,3,2]])
alimento=array(eval(input("digite o vetor: ")))

print("estafilococo:",round(valor[0],1))
print("salmonela:",round(valor[1],1))
print("coli:",round(valor[2],1))

if valor[0]==min(valor):
	print("estafilococo")
elif valor[1]==min(valor):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 01:46:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
bacteria=array([[2,1,4],[1,2,0],[2,3,2]])
alimento=array(eval(input("digite o vetor: ")))

print("estafilococo:",round(valor[0],1))
print("salmonela:",round(valor[1],1))
print("coli:",round(valor[2],1))

if valor[0]==min(valor):
	print("estafilococo")
elif valor[1]==min(valor):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 01:46:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
bacteria=array([[2,1,4],[1,2,0],[2,3,2]])
alimento=array(eval(input("digite o vetor: ")))

print("estafilococo:",round(valor[0],1))
print("salmonela:",round(valor[1],1))
print("coli:",round(valor[2],1))

if valor[0]==min(valor):
	print("estafilococo")
elif valor[1]==min(valor):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-21 01:46:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
bacteria=array([[2,1,4],[1,2,0],[2,3,2]])
alimento=array(eval(input("digite o vetor: ")))

print("estafilococo:",round(valor[0],1))
print("salmonela:",round(valor[1],1))
print("coli:",round(valor[2],1))

if valor[0]==min(valor):
	print("estafilococo")
elif valor[1]==min(valor):
	print("salmonela")
else:
	print("coli")

-- EXECUTION TIME:
1.10692
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 6, in <module>
    print("estafilococo:",round(valor[0],1))
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 01:47:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
bacteria=array([[2,1,4],[1,2,0],[2,3,2]])
alimento=array(eval(input("digite o vetor: ")))

valor= dot(inv(bacteria),alimento.T)

print("estafilococo:",round(valor[0],1))
print("salmonela:",round(valor[1],1))
print("coli:",round(valor[2],1))

if valor[0]==min(valor):
	print("estafilococo")
elif valor[1]==min(valor):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 01:47:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
bacteria=array([[2,1,4],[1,2,0],[2,3,2]])
alimento=array(eval(input("digite o vetor: ")))

valor= dot(inv(bacteria),alimento.T)

print("estafilococo:",round(valor[0],1))
print("salmonela:",round(valor[1],1))
print("coli:",round(valor[2],1))

if valor[0]==min(valor):
	print("estafilococo")
elif valor[1]==min(valor):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 01:52:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
bacteria=array([[2,1,4],[1,2,0],[2,3,2]])
alimento=array(eval(input("digite o vetor: ")))
alimento=alimento.T
valor= dot(inv(bacteria),alimento.T)

print("estafilococo:",round(valor[0],1))
print("salmonela:",round(valor[1],1))
print("coli:",round(valor[2],1))

if valor[0]== min(valor):
	print("estafilococo")
elif valor[1]== min(valor):
	print("salmonela")
else:
	print("coli")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-21 01:52:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
bacteria=array([[2,1,4],[1,2,0],[2,3,2]])
alimento=array(eval(input("digite o vetor: ")))
alimento=alimento.T
valor= dot(inv(bacteria),alimento.T)

print("estafilococo:",round(valor[0],1))
print("salmonela:",round(valor[1],1))
print("coli:",round(valor[2],1))

if valor[0]== min(valor):
	print("estafilococo")
elif valor[1]== min(valor):
	print("salmonela")
else:
	print("coli")

-- EXECUTION TIME:
0.86503
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
